--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,5 +4,6 @@ jobs:
   my-job:
     runs-on: self-hosted
     steps:
+      - uses: actions/checkout@v3
       - name: my-step
         run: echo "Hello World!"
